feat: add templates errors and adjustments return errors and update swagger docs
