# task-manager/docs/swagger/swagger.json
@@ -27,27 +27,24 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "User created successfully",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Success"
                     },
                     "400": {
-                        "description": "Invalid request body",
+                        "description": "Bad request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.BadRequestError"
                         }
                     },
-                    "401": {
-                        "description": "Not authorized",
+                    "409": {
+                        "description": "Conflict",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.ConflictError"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.InternalServerErr"
                         }
                     }
                 }
@@ -73,33 +70,24 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Login created successfully",
-                        "schema": {
-                            "type": "string"
-                        },
-                        "headers": {
-                            "Authorization": {
-                                "type": "string",
-                                "description": "Bearer token"
-                            }
-                        }
+                        "description": "Success"
                     },
                     "400": {
-                        "description": "Invalid request body",
+                        "description": "Bad request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.BadRequestError"
                         }
                     },
                     "401": {
-                        "description": "Invalid email or password",
+                        "description": "Not authorized",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.UnauthorizedError"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.InternalServerErr"
                         }
                     }
                 }
@@ -128,21 +116,21 @@
                         }
                     },
                     "400": {
-                        "description": "Invalid request body",
+                        "description": "Bad request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.BadRequestError"
                         }
                     },
                     "401": {
                         "description": "Not authorized",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.UnauthorizedError"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.InternalServerErr"
                         }
                     }
                 }
@@ -171,27 +159,24 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Task created successfully",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Success"
                     },
                     "400": {
-                        "description": "Invalid request body",
+                        "description": "Bad request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.BadRequestError"
                         }
                     },
                     "401": {
                         "description": "Not authorized",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.UnauthorizedError"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.InternalServerErr"
                         }
                     }
                 }
@@ -223,15 +208,15 @@
                         "description": "Success"
                     },
                     "400": {
-                        "description": "Invalid request body",
+                        "description": "Bad request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.BadRequestError"
                         }
                     },
                     "401": {
                         "description": "Not authorized",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.UnauthorizedError"
                         }
                     },
                     "404": {
@@ -243,7 +228,7 @@
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.InternalServerErr"
                         }
                     }
                 }
@@ -270,33 +255,30 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Task updated successfully",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Success"
                     },
                     "400": {
-                        "description": "Invalid request body",
+                        "description": "Bad request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.BadRequestError"
                         }
                     },
                     "401": {
                         "description": "Not authorized",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.UnauthorizedError"
                         }
                     },
                     "404": {
-                        "description": "Task not found",
+                        "description": "Not Found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.NotFoundError"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.InternalServerErr"
                         }
                     }
                 }
@@ -323,33 +305,30 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Task deleted successfully",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Success"
                     },
                     "400": {
-                        "description": "Invalid request body",
+                        "description": "Bad request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.BadRequestError"
                         }
                     },
                     "401": {
                         "description": "Not authorized",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.UnauthorizedError"
                         }
                     },
                     "404": {
-                        "description": "Task not found",
+                        "description": "Not Found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.NotFoundError"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.InternalServerErr"
                         }
                     }
                 }
@@ -357,12 +336,48 @@
         }
     },
     "definitions": {
+        "responses.BadRequestError": {
+            "type": "object",
+            "properties": {
+                "title": {
+                    "type": "string",
+                    "example": "Bad request"
+                }
+            }
+        },
+        "responses.ConflictError": {
+            "type": "object",
+            "properties": {
+                "title": {
+                    "type": "string",
+                    "example": "Conflict"
+                }
+            }
+        },
+        "responses.InternalServerErr": {
+            "type": "object",
+            "properties": {
+                "title": {
+                    "type": "string",
+                    "example": "Internal server error"
+                }
+            }
+        },
         "responses.NotFoundError": {
             "type": "object",
             "properties": {
                 "title": {
                     "type": "string",
                     "example": "Not found"
+                }
+            }
+        },
+        "responses.UnauthorizedError": {
+            "type": "object",
+            "properties": {
+                "title": {
+                    "type": "string",
+                    "example": "Unauthorized"
                 }
             }
         },
